# presentation-mode

./: .gitignore  README.md  enter-presentation-mode.sh  exit-presentation-mode.sh  pyproject.toml
src/presentation_mode/: __init__.py  cli.py  config.py  display.py  menubar.py  windows.py
